<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.VocabularyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            android:id="@+id/textview_review_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textColor="?android:attr/textColorSecondary"
            tools:text="Có 5 từ cần ôn tập"
            android:visibility="gone"/>

        <Button
            android:id="@+id/button_add_new_word"
            style="@style/MyVocabularyButton" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:icon="@android:drawable/ic_input_add" app:iconPadding="8dp"
            android:padding="12dp"
            android:text="@string/add_new_word"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_view_word_list"
            style="@style/MyVocabularyButton" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:icon="@android:drawable/ic_menu_agenda" app:iconPadding="8dp"
            android:padding="12dp"
            android:text="@string/view_word_list"
            android:textSize="16sp" />
        <Button
            android:id="@+id/button_create_story"
            style="@style/MyVocabularyButton" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:icon="@drawable/ic_book_24" app:iconPadding="8dp"
            android:padding="12dp"
            android:text="@string/create_bilingual_story"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_flashcards"
            style="@style/MyVocabularyButton" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:icon="@android:drawable/ic_dialog_dialer" app:iconPadding="8dp"
            android:padding="12dp"
            android:text="@string/flashcards"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_toggle_theme"
            style="@style/MyVocabularyButton" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:icon="@drawable/ic_brightness_6_24" app:iconPadding="8dp"
            android:padding="12dp"
            android:text="@string/toggle_theme"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
